# Library-Management-System-alpha

./: CMakeLists.txt  README.md
src/: main.cpp
src/authentication/: auth.cpp  auth.h
src/config/: Config.cpp  Config.h
src/managers/: BackupManager.cpp  BackupManager.h  BookManager.cpp  BookManager.h  MemberManager.cpp  MemberManager.h  RecommendationManager.cpp  RecommendationManager.h  ReportManager.cpp  ReportManager.h  ReservationManager.cpp  ReservationManager.h  TransactionManager.cpp  TransactionManager.h
src/models/: Book.cpp  Book.h  Member.cpp  Member.h  Reservation.cpp  Reservation.h  Transaction.cpp  Transaction.h
src/ui/: MenuHandler.cpp  MenuHandler.h  UI.cpp  UI.h
src/utils/: DateUtils.cpp  DateUtils.h  FileHandler.cpp  FileHandler.h  Validator.h
